finished note carousal

--- a/App/Frontend/userNotes/html/NoteCarosoul.html
+++ b/App/Frontend/userNotes/html/NoteCarosoul.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/App/Frontend/userNotes/css/NoteCarousal.css">
-    <title>User Studys</title>
+    <title>Document</title>
 </head>
+
 <body>
-    <div class="controls">
-    <div class="menu">
-       <div class="StudyNotes"></div>
-       <div class="StudyNotes"></div>
-       <div class="StudyNotes"></div>
-       <div class="StudyNotes"></div>
-       <div class="StudyNotes"></div>
-       <div class="StudyNotes"></div>
-      
-    </div>
-    <div id="toggleMenu">
-        <div id="NotePreviewDropdown"></div>
-        <div id="BookIcon"></div>
-    </div>
-    </div>
+     <div class="controls">
+        <!-- <div id="upperControls"></div> -->
+        <div class="menu">
+            <div id="upperControls"></div>
+            <div class="lowerControls">
+
+            <div class="StudyNote"></div>
+            <div class="StudyNote"></div>
+            <div class="StudyNote"></div>
+            <div class="StudyNote"></div>
+
+            </div>
+        </div> <!-- .menu -->
+        
+        <div id="toggleMenu">
+            <div id="NotePreviewDropdown" aria-label="Note Preview Dropdown"></div>
+            <div id="BookIcon" aria-label="Book Icon"></div>
+        </div>
+    </div> <!-- .controls -->
+    <script src ="/App/Frontend/userNotes/components/testingInjection.js"></script>
 </body>
+
 </html>
+
+
+
+
