added tabs to bottom of container, added 4 to be exact

--- a/App/Frontend/userNotes/html/NoteCarosoul.html
+++ b/App/Frontend/userNotes/html/NoteCarosoul.html
@@ -23,10 +23,37 @@
             </div>
         </div> <!-- .menu -->
         
+        <!--NAVBAR TABS-->
         <div id="toggleMenu">
-            <div id="NotePreviewDropdown" aria-label="Note Preview Dropdown"></div>
-            <div id="BookIcon" aria-label="Book Icon"></div>
+            <div id="NotePreviewDropdown" aria-label="Note Preview Dropdown"><h4>Study Notes</h4></div>
+            <div id="BookIcon" aria-label="Book Icon">
+                <img class = "TabIcon" src="/App/Frontend/imgs/svgs/StudyNotesDropdown.svg" >
+            </div>
         </div>
+
+        <div id="toggleTools">
+                  <div id="ToolPreviewDropdown" aria-label="Tool Preview Dropdown"><h4>Study Tools</h4></div>
+                  <div id="PencilIcon" aria-label="Tool Icon">
+                    <img class = "TabIcon" src="/App/Frontend/imgs/svgs/StudyToolsDropdown.svg">
+                  </div> 
+        </div>
+
+         <div id="toggleAI">
+                  <div id="AIToolsDropdown" aria-label="AI Tools Dropdown"><h4>AI Tools</h4></div>
+                  <div id="AIIcon" aria-label="AI Icon">
+                    <img class = "TabIcon" src="/App/Frontend/imgs/svgs/AIToolsDropdown.svg">
+                  </div>
+         </div>
+
+ 
+       <div id="toggleExtra">
+                  <div id="ExtraToolsDropdown" aria-label="Extra Tools Dropdown"><h4>Extra Tools</h4></div>
+                  <div id="ExtraIcon" aria-label="Extra Tools Icon">
+                    <img class = "TabIcon" src="/App/Frontend/imgs/svgs/ExtraToolsDropdown.svg">
+                  </div>
+        </div>
+
+
     </div> <!-- .controls -->
     <script src ="/App/Frontend/userNotes/components/testingInjection.js"></script>
 </body>
