fixed javascript for studytools componenet

--- a/App/Frontend/userNotes/html/Navbar.html
+++ b/App/Frontend/userNotes/html/Navbar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/App/Frontend/userNotes/css/NavBar.css">
-    <title>Document</title>
+    <title>NavBar</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 
 
     </div> <!-- .controls -->
-    <script src ="/App/Frontend/userNotes/javascript/injectNComponents.js"></script>
+    <script type= "module" src ="/App/Frontend/userNotes/javascript/injectNComponents.js"></script>
 </body>
 </html>
 
