finished carousal logic

--- a/App/Frontend/userNotes/html/Navbar.html
+++ b/App/Frontend/userNotes/html/Navbar.html
@@ -16,10 +16,10 @@
               <div id="upperControls"></div>
               <div class="lowerControls">
 
+              <!-- <div class="StudyNote"></div>
               <div class="StudyNote"></div>
               <div class="StudyNote"></div>
-              <div class="StudyNote"></div>
-              <div class="StudyNote"></div>
+              <div class="StudyNote"></div> -->
             </div>
             
           </div>
